Fixing z-index property on content so that fancybox is properly displayed

--- a/app/assets/stylesheets/site/style.css.scss
+++ b/app/assets/stylesheets/site/style.css.scss
@@ -60,7 +60,7 @@ body#pgIn {
      -moz-box-shadow:0 0px 24px -11px #000;
           box-shadow:0 0px 24px -11px #000;
   position: relative;
-  z-index: 10000;
+  z-index: 100;
 }
 
 #footer {
@@ -102,7 +102,7 @@ body#pgIn {
   margin: 8px auto 0 auto;
   padding-top: 5px;
   position: relative;
-  z-index: 12000;
+  z-index: 120;
 }
 
 /* Navegacao do menu */
